# RemoteControlFramework

./: .gitignore  Command.h  MHashEngine.cpp  MHashEngine.h  MHashEngineTest.cpp  Permission.h  README
crcftool/: meson.build
crcftool/src/: main.cpp  meson.build
librcfclient/: Doxyfile  meson.build
librcfclient/docs/html/: _client_8h.html  _client_8h__dep__incl.map  _client_8h__dep__incl.md5  _client_8h__incl.map  _client_8h__incl.md5  _client_8h_source.html  _server_definition_8h.html  _server_definition_8h__dep__incl.map  _server_definition_8h__dep__incl.md5  _server_definition_8h__incl.map  _server_definition_8h__incl.md5  _server_definition_8h_source.html  annotated.html  class_r_c_f_1_1_client_1_1_client-members.html  class_r_c_f_1_1_client_1_1_client.html  class_r_c_f_1_1_client_1_1_server_definition-members.html  class_r_c_f_1_1_client_1_1_server_definition.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_type.html  graph_legend.html  index.html  librcfclient_8h_source.html  namespace_client.html  namespace_r_c_f.html  namespace_r_c_f_1_1_client.html  namespaces.html
librcfclient/docs/latex/: _client_8h.tex  _client_8h__dep__incl.md5  _client_8h__incl.md5  _server_definition_8h.tex  _server_definition_8h__dep__incl.md5  _server_definition_8h__incl.md5  annotated.tex  class_r_c_f_1_1_client_1_1_client.tex  class_r_c_f_1_1_client_1_1_server_definition.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  namespace_client.tex  namespace_r_c_f.tex  namespace_r_c_f_1_1_client.tex  namespaces.tex  refman.tex
librcfclient/include/: Client.h  ServerDefinition.h  librcfclient.h  meson.build
librcfclient/src/: Client.cpp  ServerDefinition.cpp  meson.build
librcfcommon/: Doxyfile  meson.build
librcfcommon/docs/html/: _exceptions_8h.html  _exceptions_8h__dep__incl.map  _exceptions_8h__dep__incl.md5  _exceptions_8h__incl.map  _exceptions_8h__incl.md5  _exceptions_8h_source.html  _helper_functions_8h.html  _helper_functions_8h__dep__incl.map  _helper_functions_8h__dep__incl.md5  _helper_functions_8h__incl.map  _helper_functions_8h__incl.md5  _helper_functions_8h_source.html  _m_hash_engine_8h.html  _m_hash_engine_8h__dep__incl.map  _m_hash_engine_8h__dep__incl.md5  _m_hash_engine_8h__incl.map  _m_hash_engine_8h__incl.md5  _m_hash_engine_8h_source.html  annotated.html  class_r_c_f_1_1_common_1_1_already_exists_exception-members.html  class_r_c_f_1_1_common_1_1_already_exists_exception.html  class_r_c_f_1_1_common_1_1_already_exists_exception__coll__graph.md5  class_r_c_f_1_1_common_1_1_already_exists_exception__inherit__graph.map  class_r_c_f_1_1_common_1_1_at_end_exception-members.html  class_r_c_f_1_1_common_1_1_at_end_exception.html  class_r_c_f_1_1_common_1_1_at_end_exception__coll__graph.map  class_r_c_f_1_1_common_1_1_at_end_exception__inherit__graph.md5  class_r_c_f_1_1_common_1_1_filesystem_exception-members.html  class_r_c_f_1_1_common_1_1_filesystem_exception.html  class_r_c_f_1_1_common_1_1_filesystem_exception__inherit__graph.map  class_r_c_f_1_1_common_1_1_filesystem_exception__inherit__graph.md5  class_r_c_f_1_1_common_1_1_helper_functions-members.html  class_r_c_f_1_1_common_1_1_helper_functions.html  class_r_c_f_1_1_common_1_1_invalid_object_exception-members.html  class_r_c_f_1_1_common_1_1_invalid_object_exception.html  class_r_c_f_1_1_common_1_1_invalid_object_exception__coll__graph.map  class_r_c_f_1_1_common_1_1_invalid_object_exception__inherit__graph.md5  class_r_c_f_1_1_common_1_1_m_hash_engine-members.html  class_r_c_f_1_1_common_1_1_m_hash_engine.html  class_r_c_f_1_1_common_1_1_not_found_exception-members.html  (+39 more)
librcfcommon/docs/latex/: _exceptions_8h.tex  _exceptions_8h__dep__incl.md5  _exceptions_8h__incl.md5  _helper_functions_8h.tex  _helper_functions_8h__dep__incl.md5  _helper_functions_8h__incl.md5  _m_hash_engine_8h.tex  _m_hash_engine_8h__dep__incl.md5  _m_hash_engine_8h__incl.md5  annotated.tex  class_r_c_f_1_1_common_1_1_already_exists_exception.tex  class_r_c_f_1_1_common_1_1_already_exists_exception__inherit__graph.md5  class_r_c_f_1_1_common_1_1_at_end_exception.tex  class_r_c_f_1_1_common_1_1_at_end_exception__inherit__graph.md5  class_r_c_f_1_1_common_1_1_filesystem_exception.tex  class_r_c_f_1_1_common_1_1_filesystem_exception__coll__graph.md5  class_r_c_f_1_1_common_1_1_helper_functions.tex  class_r_c_f_1_1_common_1_1_invalid_object_exception.tex  class_r_c_f_1_1_common_1_1_invalid_object_exception__inherit__graph.md5  class_r_c_f_1_1_common_1_1_m_hash_engine.tex  class_r_c_f_1_1_common_1_1_not_found_exception.tex  class_r_c_f_1_1_common_1_1_not_found_exception__coll__graph.md5  class_r_c_f_1_1_common_1_1_parameters_needed_exception.tex  class_r_c_f_1_1_common_1_1_parameters_needed_exception__coll__graph.md5  class_r_c_f_1_1_common_1_1_parser_exception.tex  class_r_c_f_1_1_common_1_1_parser_exception__inherit__graph.md5  class_r_c_f_1_1_common_1_1_protocol_exception.tex  class_r_c_f_1_1_common_1_1_protocol_exception__inherit__graph.md5  class_r_c_f_1_1_common_1_1_runtime_exception.tex  class_r_c_f_1_1_common_1_1_runtime_exception__inherit__graph.md5  files.tex  (+7 more)
librcfcommon/include/: Exceptions.h  HelperFunctions.h  MHashEngine.h  librcfcommon.h  meson.build
librcfcommon/src/: Exceptions.cpp  HelperFunctions.cpp  MHashEngine.cpp  meson.build
librcfserver/: Doxyfile  meson.build
librcfserver/include/: Command.h  CommandGroup.h  ExecuteImpl.h  Group.h  Permission.h  Server.h  User.h  librcfserver.h  meson.build
librcfserver/src/: Command.cpp  CommandGroup.cpp  ExecuteImpl.cpp  Group.cpp  Permission.cpp  Server.cpp  User.cpp  meson.build
rcfclient/src/: main.cpp  meson.build
rcfserver/: meson.build
rcfserver/src/: main.cpp  meson.build
srcftool/: meson.build
srcftool/src/: main.cpp  meson.build
testrcfclient/: meson.build
testrcfclient/src/: main.cpp  meson.build
wxrcf/: meson.build
wxrcf/include/: App.h  layout.h  layoutBase.h
wxrcf/proj/: wxrcf.fbp
wxrcf/src/: App.cpp  layout.cpp  layoutBase.cpp  meson.build
(+247 files in other folders)
