project('librcfcommon', 'cpp')
comp = meson.get_compiler('cpp')
inc = include_directories('include')
dep = find_library('mhash')
subdir('include')
subdir('src')
pkgconfig_gen(libraries : librcfc, version : '0.1', name : 'librcfcommon', filebase : 'librcfcommon', description : 'A library of common classes for RemoteControlFramework', include_directories: inc)
