project('wxRCF', 'cpp')
comp = meson.get_compiler('cpp')
if build.name() == 'windows'
    rcfcdep = find_library('libsrcfclient', required: false)
    rcfcmdep = find_library('libsrcfcommon', required: false)
    boostdep = dependency('boost', modules: ['filesystem', 'system', 'predef', 'asio', 'thread'], required: false)
    ossldep = dependency('openssl', required: false)
    add_global_arguments('-lsrcfclient -lsrcfcommon -lboost_filesystem -lboost_system -lboost_thread -lssleay32 -leay32 -lws2_32', language: 'cpp')
    linkargs = ['-lsrcfclient', '-lsrcfcommon', '-lboost_filesystem', '-lboost_system', '-lboost_thread', '-lmhash', '-lssleay32', '-leay32', '-lws2_32']
else
    inc = include_directories('include', '/usr/include/wx-3.0', '/usr/lib/wx/include/gtk2-unicode-3.0')
    add_global_arguments('-D_FILE_OFFSET_BITS=64', language: 'cpp')
    add_global_arguments('-DWXUSINGDLL', language: 'cpp')
    add_global_arguments('-D__WXGTK__', language: 'cpp')
    rcfcdep = dependency('librcfclient')
    rcfcmdep = dependency('librcfcommon')
    boostdep = dependency('boost', modules: ['filesystem', 'system', 'predef', 'asio', 'thread'])
    ossldep = dependency('openssl')
    wxdep1 = find_library('wx_gtk2u_xrc-3.0')
    wxdep2 = find_library('wx_gtk2u_webview-3.0')
    wxdep3 = find_library('wx_gtk2u_html-3.0')
    wxdep4 = find_library('wx_gtk2u_qa-3.0')
    wxdep5 = find_library('wx_gtk2u_adv-3.0')
    wxdep6 = find_library('wx_gtk2u_core-3.0')
    wxdep7 = find_library('wx_baseu_xml-3.0')
    wxdep8 = find_library('wx_baseu_net-3.0')
    wxdep9 = find_library('wx_baseu-3.0')
endif
subdir('src')
