if build.name() == 'windows'
    install_headers('MHashEngine.h', 'HelperFunctions.h', 'Exceptions.h', 'librcfcommon.h', subdir : 'librcfcommon')
else
    install_headers('include/MHashEngine.h', 'include/HelperFunctions.h', 'include/Exceptions.h', 'include/librcfcommon.h', subdir : 'librcfcommon')
endif
